# hz-crud-api

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
migrations/: 20250310000000_initial_schema.sql.sql  20250312000000_add_auth_fields.sql  20250318000000_create_batches_table.sql  20250319000000_create_problem_logs_table.sql  20250320000000_create_receiving_log_table.sql
src/: auth.rs  lib.rs  main.rs
tests/: README.md  api_test.rs
