[package]
name = "crud-hz-api"
version = "0.1.0"
edition = "2018"

[dependencies]
postgres = "0.19"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
env_logger = "0.10.0"
log = "0.4.20"  
actix-web = "4.4.0"
dotenv = "0.15.0"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "migrate"] }

[dev-dependencies]
actix-rt = "2.8"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.3", features = ["v4"] }
