[package]
name = "crud-hz-api"
version = "0.1.0"
edition = "2018"

[dependencies]
actix-web = "4.4.0"
actix-cors = "0.6.4"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid", "json", "migrate"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
env_logger = "0.10"
log = "0.4"
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.4", features = ["v4", "serde"] }
rand = "0.8"
argon2 = "0.5"
jsonwebtoken = "8.3"
thiserror = "1.0"